# django_game_portal

./: db.sqlite3  docker-compose.yml  dockerfile  manage.py  pyproject.toml  readme.md
game_portal/: asgi.py  settings.py  urls.py  wsgi.py
games/: admin.py  models.py  tests.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_remove_game_description.py  0003_game_last_played.py  0004_game_user.py
games/templates/: add.html  index.html  login.html  register.html  style.css
